<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="top">
    <EditText
        android:id="@+id/server_connection_server_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <EditText
            android:id="@+id/server_connection_server_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:hint="@string/server_address"/>
        <EditText
            android:id="@+id/server_connection_server_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:hint="@string/server_port"/>
    </LinearLayout>
    <EditText
        android:id="@+id/server_connection_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"/>
    <EditText
        android:id="@+id/server_connection_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"/>
</LinearLayout>